--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^1.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.4",
     "react-polymorphic-box": "^3.0.3",
     "react-query": "^3.12.1",
     "react-router-dom": "^5.2.0",
