--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
+    "framer-motion": "^3.10.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.4",
