--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@craco/craco": "^6.1.1",
     "@hookform/resolvers": "^1.3.5",
     "@reach/tabs": "^0.13.2",
+    "@szhsin/react-menu": "^1.8.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
