--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
+    "@types/lodash": "^4.14.168",
     "@types/nanoid": "^2.1.0",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/socket.io-client": "^1.4.36",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "date-fns": "^2.19.0",
     "framer-motion": "^3.10.2",
+    "lodash": "^4.17.21",
     "nanoid": "^3.1.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -28,6 +31,7 @@
     "react-query": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "socket.io-client": "^2.3.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "zod": "^3.0.0-alpha.4",
