--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@craco/craco": "^6.1.1",
     "@hookform/resolvers": "^1.3.5",
     "@reach/tabs": "^0.13.2",
+    "@react-hook/resize-observer": "^1.2.0",
     "@szhsin/react-menu": "^1.8.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -31,6 +32,7 @@
     "react-query": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-textarea-autosize": "^8.3.2",
     "socket.io-client": "^2.3.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
